# hop

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md  hop_slides.html  hop_slides.md  hop_slides.pptx  hop_slides_unused.md  lightning.html  lightning.md
hop/: hop.sln  hop.vcxproj  hop.vcxproj.filters
include/: hop.hpp  hop_utils.hpp
pictures/: wormhole.jfif
test/: CMakeLists.txt  hop_out.txt  hop_scribble.cpp  hop_test.cpp  hop_test.sln  hop_test.vcxproj  hop_test.vcxproj.filters  hop_test3.cpp  hop_test4.cpp  hop_test_2.cpp  hop_test_3.cpp  hop_test_4.cpp
